--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <!-- Monetag SDKs -->
+    <!-- Monetag Main SDK -->
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
 
     <style>
-        :root {
-            --gold: #f59e0b;
-            --dark-gold: #78350f;
-        }
         body {
             background-color: #451a03;
             background-image: 
@@ -26,77 +22,75 @@
             background-size: 58px 58px;
             background-position: 0px 2px, 4px 35px, 29px 31px, 34px 6px;
             color: #fff;
-            font-family: 'Segoe UI', sans-serif;
-            min-height: 100vh;
+            font-family: 'Inter', sans-serif;
+            overflow-x: hidden;
         }
         .shining-gold {
-            background: linear-gradient(120deg, #f59e0b, #fef3c7, #f59e0b);
+            background: linear-gradient(120deg, #f59e0b, #fef3c7, #fbbf24, #f59e0b);
             background-size: 200% auto;
-            animation: shine 3s linear infinite;
+            animation: shine 2s linear infinite;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 900;
         }
         @keyframes shine { to { background-position: 200% center; } }
-        .glass-card { 
-            background: rgba(0, 0, 0, 0.75); 
-            backdrop-filter: blur(10px); 
-            border: 2px solid var(--gold);
-            border-radius: 1.5rem;
-        }
+        .glass-card { background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(10px); border: 2px solid #b45309; border-radius: 20px; }
         .btn-gold { 
             background: linear-gradient(to bottom, #fbbf24, #d97706); 
-            color: #000; font-weight: bold; 
-            box-shadow: 0 4px 0 #92400e;
+            color: #000; font-weight: 800; 
+            border-bottom: 4px solid #78350f;
+            transition: 0.2s;
         }
-        .btn-gold:active { transform: translateY(2px); box-shadow: 0 2px 0 #92400e; }
-        .nav-item.active { color: #fbbf24; }
+        .btn-gold:active { transform: translateY(2px); border-bottom: 2px solid #78350f; }
+        .nav-item.active { color: #fbbf24; border-top: 3px solid #fbbf24; }
     </style>
 </head>
 <body class="pb-24">
 
-    <!-- Top Bar -->
-    <header class="p-4 glass-card m-2 flex justify-between items-center sticky top-2 z-50">
+    <!-- Header -->
+    <header class="p-4 glass-card m-2 sticky top-2 z-50 flex justify-between items-center shadow-2xl">
         <div>
             <h1 class="shining-gold text-xl">PAPERHOUSE INC</h1>
-
-            <p class="text-[10px] text-yellow-500 font-bold">@<span id="user-tag">loading...</span></p>
+            <p class="text-[10px] text-yellow-500">@<span id="user-display">...</span></p>
         </div>
         <div class="text-right">
-            <p class="text-[10px] text-slate-400 uppercase">Balance</p>
-            <p class="text-xl font-black text-yellow-500">₱<span id="bal">0.0000</span></p>
+
+            <p class="text-[9px] text-slate-400">BALANCE</p>
+            <p class="text-xl font-black text-yellow-500">₱<span id="user-bal">0.0000</span></p>
         </div>
     </header>
 
     <main class="p-3 space-y-4">
         
-        <!-- Native Ad Card Slot -->
-        <div id="native-card" class="glass-card p-2 text-center overflow-hidden min-h-[120px]">
-            <p class="text-[9px] text-yellow-600 mb-1 italic">Exclusive Sponsor</p>
-            <div id="native-container"></div>
+        <!-- Native Ad Card (Refreshes every 5 mins) -->
+        <div class="glass-card p-3 text-center">
+            <p class="text-[10px] text-yellow-600 font-bold mb-2 italic">✨ PREMIUM SPONSOR ✨</p>
+            <div id="native-box" class="min-h-[100px] flex items-center justify-center">
+                <!-- Ad will inject here -->
+            </div>
         </div>
 
         <!-- HOME -->
         <section id="home-sec" class="section-content space-y-4">
             <div class="glass-card p-6 text-center">
-                <i class="fas fa-coins text-4xl text-yellow-500 mb-2"></i>
-                <h2 class="text-lg font-bold">Rewarded Interstitial</h2>
-                <p class="text-xs text-slate-400 mb-4">Earn ₱0.0100 per Ad</p>
-                <button id="main-ad-btn" onclick="watchMainAd()" class="btn-gold w-full py-4 rounded-xl">WATCH AD NOW</button>
-                <p id="main-cd" class="text-xs text-red-400 mt-2"></p>
+                <div class="mb-2 text-4xl">💰</div>
+                <h2 class="text-lg font-bold mb-1">Standard Reward</h2>
+                <p class="text-xs text-slate-400 mb-4">Earn ₱0.0100 per Interstitial Ad</p>
+                <button id="main-ad-btn" onclick="watchMainAd()" class="btn-gold w-full py-4 rounded-2xl shadow-xl">WATCH AD</button>
+                <p id="main-cd" class="text-xs text-red-400 mt-2 font-bold"></p>
             </div>
 
             <div class="grid grid-cols-2 gap-3">
                 <div class="glass-card p-4 text-center">
-                    <p class="text-xs font-bold">Quick Reward</p>
-                    <p class="text-[10px] text-yellow-600">₱0.0095</p>
-                    <button id="pop-ad-btn" onclick="watchQuickPop()" class="bg-yellow-600 text-black text-[10px] px-4 py-1 mt-2 rounded-full font-bold">CLAIM</button>
+                    <p class="text-xs font-bold">Quick Pop</p>
+                    <p class="text-[10px] text-yellow-600 mb-2">₱0.0095</p>
+                    <button id="pop-ad-btn" onclick="watchQuickPop()" class="bg-yellow-600 text-black text-[10px] px-4 py-1 rounded-full font-black">CLAIM</button>
                     <p id="pop-cd" class="text-[10px] text-red-400 mt-1"></p>
                 </div>
-                <div class="glass-card p-4 text-center" onclick="showSection('ref')">
-                    <p class="text-xs font-bold">Invite Code</p>
-                    <p class="text-[10px] text-yellow-600">Earn 8%</p>
-                    <p class="text-[10px] text-blue-400 mt-2">Open Panel</p>
+                <div class="glass-card p-4 text-center" onclick="showSection('wallet')">
+                    <p class="text-xs font-bold">Referral</p>
+                    <p class="text-[10px] text-yellow-600 mb-2">Earn 8%</p>
+                    <span class="text-blue-400 text-[10px] font-bold">ENTER CODE</span>
                 </div>
             </div>
         </section>
@@ -105,51 +99,50 @@
         <section id="chat-sec" class="section-content hidden space-y-3">
             <div class="glass-card h-[350px] flex flex-col overflow-hidden">
                 <div id="chat-msgs" class="flex-grow overflow-y-auto p-4 space-y-3 text-sm"></div>
-                <div class="p-3 bg-black/50 flex gap-2">
-                    <input type="text" id="chat-in" class="bg-slate-900 border border-yellow-900 rounded-lg px-3 py-2 flex-grow text-xs" placeholder="Message to watch 3 ads...">
-                    <button onclick="sendChat()" class="btn-gold px-4 rounded-lg"><i class="fas fa-paper-plane"></i></button>
+                <div class="p-3 bg-black/60 flex gap-2">
+                    <input type="text" id="chat-input" class="bg-slate-900 border border-yellow-900 rounded-xl px-4 py-2 flex-grow text-xs outline-none" placeholder="Message (Watch 3 Ads)...">
+                    <button onclick="sendChatMessage()" class="btn-gold px-4 rounded-xl"><i class="fas fa-paper-plane"></i></button>
                 </div>
             </div>
-            <p id="chat-cd" class="text-center text-xs text-red-400"></p>
+            <p id="chat-cd" class="text-center text-xs text-red-500 font-bold"></p>
         </section>
 
-        <!-- REFERRAL & WITHDRAW -->
-        <section id="ref-sec" class="section-content hidden space-y-4">
+        <!-- WALLET (REF & WITHDRAW) -->
+        <section id="wallet-sec" class="section-content hidden space-y-4">
             <div class="glass-card p-5">
-                <h3 class="shining-gold text-sm mb-3">REFERRAL CODE</h3>
-                <p class="text-[11px] text-slate-400 mb-2">Enter your friend's username to give them 8% commission on your earnings.</p>
+                <h3 class="shining-gold text-sm mb-2">REFERRAL CODE</h3>
                 <div class="flex gap-2">
-                    <input type="text" id="ref-code-input" class="bg-slate-900 border border-slate-700 rounded-lg p-2 flex-grow text-xs" placeholder="Enter Username (e.g. JohnDoe)">
-                    <button onclick="applyReferral()" class="btn-gold px-4 py-2 rounded-lg text-xs">Apply</button>
-                </div
+                    <input type="text" id="ref-input" class="bg-slate-900 border border-slate-700 rounded-xl p-3 flex-grow text-xs outline-none" placeholder="Friend's Username">
+                    <button onclick="applyRef()" class="btn-gold px-4 rounded-xl text-xs">APPLY</button>
+                </div>
+                <div class="mt-4 flex justify-between items-center text-xs">
+                    <span>Your Code: <b class="text-yellow-500" id="my-code">...</b
 
->
-                <div class="mt-4 flex justify-between items-center text-xs border-t border-yellow-900 pt-3">
-                    <span>Your Code: <b class="text-yellow-500" id="my-code-display">...</b></span>
-                    <span>Bonus: <b class="text-green-400">₱<span id="ref-bonus-total">0.00</span></b></span>
+></span>
+                    <span>Ref Profit: <b class="text-green-500">₱<span id="ref-earn">0.00</span></b></span>
                 </div>
             </div>
 
             <div class="glass-card p-5">
-                <h3 class="shining-gold text-sm mb-4">GCASH WITHDRAWAL</h3>
-                <input type="number" id="wd-amt" placeholder="Amount (Min 1.00)" class="w-full bg-slate-900 p-3 rounded-lg mb-2 text-xs">
-                <input type="text" id="wd-num" placeholder="GCash Number" class="w-full bg-slate-900 p-3 rounded-lg mb-4 text-xs">
-                <button onclick="requestPayout()" class="btn-gold w-full py-3 rounded-lg">SUBMIT PAYOUT</button>
+                <h3 class="shining-gold text-sm mb-4">GCASH PAYOUT</h3>
+                <input type="number" id="wd-amt" placeholder="Amount (Min 1.00)" class="w-full bg-slate-900 p-3 rounded-xl mb-2 text-xs outline-none">
+                <input type="text" id="wd-num" placeholder="GCash Number" class="w-full bg-slate-900 p-3 rounded-xl mb-4 text-xs outline-none">
+                <button onclick="submitWD()" class="btn-gold w-full py-3 rounded-xl">REQUEST WITHDRAW</button>
             </div>
 
-            <h3 class="text-xs font-bold text-yellow-700 px-1 uppercase">Transaction History</h3>
+            <h3 class="text-xs font-bold text-yellow-700 uppercase px-1">Payment History</h3>
             <div id="wd-history" class="space-y-2"></div>
         </section>
 
         <!-- ADMIN -->
         <section id="admin-sec" class="section-content hidden space-y-4">
             <div id="admin-login" class="glass-card p-6">
-                <input type="password" id="adm-pass" placeholder="Password" class="w-full bg-slate-900 p-3 rounded-lg mb-3">
-                <button onclick="authAdmin()" class="btn-gold w-full py-2 rounded-lg">LOGIN</button>
+                <input type="password" id="adm-pass" placeholder="Master Password" class="w-full bg-slate-900 p-3 rounded-xl mb-3 outline-none">
+                <button onclick="loginAdmin()" class="btn-gold w-full py-2 rounded-xl">LOGIN DASHBOARD</button>
             </div>
             <div id="admin-panel" class="hidden space-y-3">
-                <h2 class="text-red-500 font-bold">MANUAL APPROVALS</h2>
-                <div id="admin-requests" class="space-y-2 text-[10px]"></div>
+                <h2 class="text-red-500 font-black italic">PENDING APPROVALS</h2>
+                <div id="admin-list" class="space-y-2 text-[10px]"></div>
             </div>
         </section>
 
@@ -158,16 +151,16 @@
     <!-- Navigation -->
     <nav class="fixed bottom-0 left-0 right-0 glass-card mx-2 mb-2 flex justify-around items-center h-16 z-50">
         <button onclick="showSection('home')" class="nav-item flex flex-col items-center flex-1">
-            <i class="fas fa-home text-lg"></i><span class="text-[10px]">Home</span>
+            <i class="fas fa-home"></i><span class="text-[10px]">Home</span>
         </button>
         <button onclick="showSection('chat')" class="nav-item flex flex-col items-center flex-1">
-            <i class="fas fa-comments text-lg"></i><span class="text-[10px]">Chat</span>
+            <i class="fas fa-comments"></i><span class="text-[10px]">Chat</span>
         </button>
-        <button onclick="showSection('ref')" class="nav-item flex flex-col items-center flex-1">
-            <i class="fas fa-wallet text-lg"></i><span class="text-[10px]">Wallet</span>
+        <button onclick="showSection('wallet')" class="nav-item flex flex-col items-center flex-1">
+            <i class="fas fa-wallet"></i><span class="text-[10px]">Wallet</span>
         </button>
         <button onclick="showSection('admin')" class="nav-item flex flex-col items-center flex-1">
-            <i class="fas fa-user-shield text-lg"></i><span class="text-[10px]">Admin</span>
+            <i class="fas fa-tools"></i><span class="text-[10px]">Admin</span>
         </button>
     </nav>
 
