--- a/index.html
+++ b/index.html
@@ -6,138 +6,144 @@
     <title>🎖🤑PAPERHOUSE INC ADS🤑🎖</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Monetag SDK -->
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
-
     <style>
-        :root { --gold: linear-gradient(135deg, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c); }
-        body { background: #f3f4f6; font-family: 'Inter', sans-serif; -webkit-tap-highlight-color: transparent; }
-        .gold-card { background: var(--gold); background-size: 200% 200%; animation: shine 4s linear infinite; }
-        @keyframes shine { 0% {background-position:0% 50%} 50% {background-position:100% 50%} 100% {background-position:0% 50%} }
-        .tab-content { display: none; }
-        .tab-content.active { display: block; animation: slideIn 0.2s ease-out; }
-        @keyframes slideIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
-        .nav-btn.active { color: #b45309; }
-        .no-scrollbar::-webkit-scrollbar { display: none; }
-        .cooldown { filter: grayscale(1); opacity: 0.5; pointer-events: none; }
+        body { background: #020617; color: #e2e8f0; font-family: 'Inter', sans-serif; }
+        .gold-gradient { background: linear-gradient(135deg, #fbbf24 0%, #d97706 100%); }
+        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        .nav-active { color: #fbbf24; border-bottom: 2px solid #fbbf24; }
+        .cooldown-active { filter: grayscale(1); pointer-events: none; opacity: 0.5; }
+        #ad-timer { font-variant-numeric: tabular-nums; }
     </style>
 </head>
 <body class="select-none">
 
-    <!-- Header Stats -->
-    <div class="gold-card p-5 shadow-lg sticky top-0 z-50 rounded-b-3xl">
-        <div class="flex justify-between items-center text-black">
-            <h1 class="font-black text-sm tracking-tighter">🎖 PAPERHOUSE INC</h1>
-            <div class="text-right">
-                <p class="text-[10px] font-bold opacity-70 uppercase">Telegram User</p>
-                <p id="display-username" class="text-xs font-black">@loading...</p>
-            </div>
-        </div>
-        <div class="flex gap-3 mt-4">
-            <div class="flex-1 bg-white/20 backdrop-blur-md p-3 rounded-2xl border border-white/30">
-                <p class="text-[9px] font-bold uppercase">Balance</p>
-                <p class="text-xl font-black">₱ <span id="user-balance">0.000</span></p>
-            </div>
-            <div class="flex-1 bg-white/20 backdrop-blur-md p-3 rounded-2xl border border-white/30">                <p class="text-[9px] font-bold uppercase">Chat Points</p>
-                <p class="text-xl font-black" id="user-points">0</p>
-            </div>
-        </div>
+    <!-- Login/Onboarding -->
+    <div id="login-screen" class="fixed inset-0 z-[100] bg-slate-950 flex flex-col items-center justify-center p-8">
+        <div class="text-6xl mb-6">🎖</div>
+        <h1 class="text-2xl font-black text-center mb-2 uppercase tracking-tighter">Paperhouse Inc Ads</h1>
+        <p class="text-slate-400 text-sm mb-8">Premium GCash Rewards System</p>
+        <input type="text" id="reg-name" placeholder="Username" class="w-full p-4 rounded-2xl bg-slate-900 border border-slate-800 mb-4 focus:outline-none focus:border-yellow-500">
+        <input type="number" id="reg-gcash" placeholder="GCash Number (09...)" class="w-full p-4 rounded-2xl bg-slate-900 border border-slate-800 mb-6 focus:outline-none focus:border-yellow-500">
+        <button onclick="app.register()" class="w-full gold-gradient py-4 rounded-2xl font-bold text-slate-900 shadow-lg shadow-yellow-500/20">ENTER DASHBOARD</button>
     </div>
 
-    <!-- Main Views -->
-    <main class="p-4 pb-24">
-        
-        <!-- EARN TAB -->
-        <section id="earn-view" class="tab-content active space-y-4">
-            <div class="grid grid-cols-2 gap-3">
-                <button onclick="watchVideoAd()" id="vid-btn" class="gold-card p-6 rounded-3xl shadow-md font-bold text-center">
-                    <i class="fas fa-video text-2xl mb-2"></i><br>VIDEO ADS<br><span class="text-[10px]">+1 Pt (20s)</span>
-                </button>
-                <button onclick="watchPopupAd()" id="pop-btn" class="gold-card p-6 rounded-3xl shadow-md font-bold text-center">
-                    <i class="fas fa-gift text-2xl mb-2"></i><br>BONUS PT<br><span class="text-[10px]">+1 Pt (20s)</span>
-                </button>
+    <!-- Main App -->
+    <div id="app" class="hidden min-h-screen pb-24">
+        <!-- Top Bar -->
+        <header class="p-5 flex justify-between items-center sticky top-0 z-40 glass">
+            <div>
+                <h2 id="user-display" class="font-bold text-white">---</h2>
+                <p class="text-[10px] text-yellow-500 font-bold uppercase tracking-widest">Premium Member</p>
             </div>
+            <div class="text-right">
 
-            <div class="bg-white rounded-3xl p-5 shadow-sm">
-                <h2 class="font-bold text-gray-800 mb-3 flex items-center"><i class="fas fa-chart-line mr-2 text-blue-500"></i> DAILY LEADERBOARD</h2>
-                <div id="leaderboard-list" class="space-y-2"></div>
+                <p class="text-[10px] text-slate-400 uppercase font-bold">Balance</p>
+                <h2 id="balance-display" class="text-xl font-black text-white">₱0.00</h2>
             </div>
-        </section>
+        </header>
 
-        <!-- CHAT TAB -->
-        <section id="chat-view" class="tab-content">
-            <div class="bg-white rounded-3xl shadow-sm flex flex-col h-[60vh]">
-                <div id="chat-messages" class="flex-1 overflow-y-auto p-4 space-y-3 no-scrollbar"></div>
-                <div class="p-4 border-t">
+        <main class="p-4 space-y-6">
+            <!-- Stats Cards -->
+            <section id="sec-home" class="space-y-4">
+                <div class="glass rounded-[2rem] p-8 text-center relative overflow-hidden">
+                    <div class="absolute top-0 right-0 p-4 opacity-10"><i class="fas fa-wallet text-6xl"></i></div>
+                    <p class="text-slate-400 text-sm mb-1">Available to Withdraw</p>
+                    <h1 id="big-balance" class="text-5xl font-black text-white mb-6">₱0.00</h1>
+                    <div id="cooldown-box" class="hidden mb-4 text-xs font-bold text-yellow-500 bg-yellow-500/10 py-2 rounded-full">
+                        NEXT AD IN: <span id="ad-timer">30</span>s
+                    </div>
+                    <button onclick="app.requestWithdraw()" class="w-full py-3 rounded-xl bg-white text-black font-bold text-sm">CASH OUT NOW</button>
+                </div>
+
+                <!-- Ad Buttons -->
+                <div class="grid grid-cols-2 gap-4" id="ad-container">
+                    <button onclick="app.playAd('inter')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
+                        <div class="w-12 h-12 rounded-full bg-blue-500/20 flex items-center justify-center mb-3">
+                            <i class="fas fa-bolt text-blue-400 text-xl"></i>
+                        </div>
+                        <span class="font-bold text-sm">Turbo Ad</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.01</span>
+                    </button>
+                    <button onclick="app.playAd('pop')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
+                        <div class="w-12 h-12 rounded-full bg-purple-500/20 flex items-center justify-center mb-3">
+                            <i class="fas fa-rocket text-purple-400 text-xl"></i>
+                        </div>
+                        <span class="font-bold text-sm">Premium Ad</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.01</span>
+                    </button>
+                </div>
+            </section>
+
+            <!-- Referrals Section -->
+            <section id="sec-referral" class="hidden space-y-4">
+                <div class="gold-gradient p-6 rounded-3xl text-slate-900">
+                    <h3 class="font-black text-xl mb-1">Affiliate Program</h3>
+                    <p class="text-sm font-medium opacity-80">Earn 8% lifetime commission from every ad your friends watch.</p>
+                </div>
+                <div class="glass p-5 rounded-2xl">
+                    <p class="text-xs text-slate-400 mb-2 font-bold uppercase">Your Referral Link</p>
                     <div class="flex gap-2">
-                        <input type="text" id="chat-input" placeholder="Message (1 Pt)..." class="flex-1 bg-gray-100 border-none rounded-2xl px-4 py-3 text-sm focus:ring-2 focus:ring-amber-500">
-                        <button onclick="sendChatMessage()" id="chat-send-btn" class="bg-blue-600 text-white w-12 h-12 rounded-2xl flex items-center justify-center">
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
-                    </div>                    <p id="chat-cd-msg" class="text-[10px] text-center mt-2 font-bold text-red-500 uppercase"></p>
+                        <input id="ref-link" readonly class="flex-1 bg-slate-900/50 p-3 rounded-lg text-xs border border-white/5 text-slate-300">
+                        <button onclick="app.copyRef()" class="bg-white text-black px-4 rounded-lg font-bold text-xs">COPY</button>
+                    </div>
                 </div>
-            </div>
-        </section>
+                <div class="grid grid-cols-2 gap-4">
+                    <div class="glass p-4 rounded-2xl text-center">
+                        <p class="text-[10px] text-slate-400">Total Referrals</p>
+                        <p id="ref-count" class="text-xl font-bold">0</p>
+                    </div>
+                    <div class="gl
 
-        <!-- WALLET TAB -->
-        <section id="wallet-view" class="tab-content space-y-4">
-            <div class="bg-white rounded-3xl p-6 shadow-sm">
-                <h2 class="font-black text-blue-600 mb-1 tracking-tight">GCASH WITHDRAWAL</h2>
-                <p class="text-[10px] font-bold text-gray-400 mb-4 uppercase">Min: ₱ 1.00</p>
-                <input type="text" id="gcash-name" placeholder="GCash Name" class="w-full bg-gray-50 rounded-xl p-3 mb-2 border-none text-sm">
-                <input type="number" id="gcash-number" placeholder="GCash Number" class="w-full bg-gray-50 rounded-xl p-3 mb-4 border-none text-sm">
-                <button onclick="handleWithdrawal()" class="w-full gold-card py-4 rounded-2xl font-black shadow-lg">CASHOUT NOW</button>
-            </div>
-
-            <div class="bg-amber-100 rounded-3xl p-5 border border-amber-200">
-                <h3 class="font-bold text-amber-900 text-sm mb-3">REFERRAL SYSTEM</h3>
-                <input type="text" id="ref-input" placeholder="Referrer Username" class="w-full bg-white/50 rounded-xl p-3 mb-2 border-none text-sm">
-                <button onclick="saveReferrer()" class="w-full bg-amber-800 text-white py-2 rounded-xl text-xs font-bold">UPDATE REFERRER</button>
-                <div class="mt-4 flex justify-between items-center"><span class="text-[10px] font-bold text-amber-800">TOTAL REF EARNINGS:</span>
-                    <span class="font-black text-amber-900">₱ <span id="total-ref-earning">0.00</span></span>
+ass p-4 rounded-2xl text-center">
+                        <p class="text-[10px] text-slate-400">Total Commissions</p>
+                        <p id="ref-earnings" class="text-xl font-bold text-green-400">₱0.00</p>
+                    </div>
                 </div>
-            </div>
+            </section>
 
-            <div class="bg-white rounded-3xl p-5 shadow-sm">
-                <h3 class="font-bold text-gray-700 text-sm mb-3">RECENT PAYOUT HISTORY</h3>
-                <div id="payout-history" class="space-y-3"></div>
-            </div>
-        </section>
-
-        <!-- OWNER TAB -->
-        <section id="owner-view" class="tab-content">
-            <div id="owner-auth" class="bg-white p-8 rounded-3xl shadow-xl text-center">
-                <h2 class="font-black text-xl mb-4">OWNER ACCESS</h2>
-                <input type="password" id="owner-pass" placeholder="Password" class="w-full border p-3 rounded-xl mb-4 text-center">
-                <button onclick="loginOwner()" class="w-full bg-black text-white py-3 rounded-xl font-bold">LOGIN</button>
-            </div>
-            <div id="owner-panel" class="hidden space-y-4">
-                <div class="bg-red-600 text-white p-4 rounded-2xl font-black flex justify-between">
-                    <span>PENDING REQUESTS</span>
-                    <i class="fas fa-crown"></i>
+            <!-- History Section -->
+            <section id="sec-history" class="hidden space-y-4">
+                <h3 class="font-bold text-lg">Withdrawal History</h3>
+                <div id="history-list" class="space-y-3">
+                    <p class="text-center text-slate-500 py-10">No history found.</p>
                 </div>
-                <div id="owner-request-list" class="space-y-3"></div>
-            </div>
-        </section>
+            </section>
 
-    </main>
+            <!-- Leaderboard -->
+            <section id="sec-leaderboard" class="hidden space-y-3">
+                <h3 class="font-bold text-lg">Global Ranking</h3>
+                <div id="leaderboard-list" class="space-y-2"></div>
+            </section>
 
-    <!-- Navigation -->
-    <nav class="fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur-md border-t border-gray-100 flex justify-around py-4 z-50">
-        <button onclick="showTab('earn')" id="nav-earn" class="nav-btn active flex flex-col items-center text-gray-400">
-            <i class="fas fa-home text-xl"></i><span class="text-[10px] font-bold">Earn</span>
-        </button>
-        <button onclick="showTab('chat')" id="nav-chat" class="nav-btn flex flex-col items-center text-gray-400">
-            <i class="fas fa-comments text-xl"></i><span class="text-[10px] font-bold">Chat</span>
-        </button>
-        <button onclick="showTab('wallet')" id="nav-wallet" class="nav-btn flex flex-col items-center text-gray-400">
-            <i class="fas fa-wallet text-xl"></i><span class="text-[10px] font-bold">Wallet</span>
-        </button>
-        <button onclick="showTab('owner')" id="nav-owner" class="nav-btn flex flex-col items-center text-gray-400">
-            <i class="fas fa-user-shield text-xl"></i><span class="text-[10px] font-bold">Owner</span>
-        </button>
-    </nav>
+            <!-- Chat Room -->
+            <section id="sec-chat" class="hidden flex flex-col h-[65vh]">
+                <div id="chat-box" class="flex-1 overflow-y-auto space-y-4 mb-4 pr-2"></div>
+                <div class="flex gap-2 p-2 glass rounded-2xl">
+                    <input type="text" id="chat-input" placeholder="Say something..." class="flex-1 bg-transparent p-2 focus:outline-none text-sm">
+                    <button onclick="app.sendMessage()" class="bg-yellow-500 text-black w-10 h-10 rounded-xl flex items-center justify-center">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </div>
+            </section>
+
+            <!-- Admin Section -->
+            <section id="sec-admin" class="hidden space-y-4">
+                <h2 class="text-xl font-black text-red-500">PAYOUT MANAGEMENT</h2>
+                <div id="admin-list" class="space-y-4"></div>
+            </section>
+        </main>
+
+        <!-- Bottom Navigation -->
+        <nav class="fixed bottom-0 left-0 right-0 glass border-t border-white/5 flex justify-around items-center p-3 z-50">
+            <button onclick="app.nav('home')" class="nav-btn nav-active flex flex-col items-center"><i class="fas fa-home mb-1"></i><span class="text-[9px]">Home</span></button>
+            <button onclick="app.nav('referral')" class="nav-btn flex flex-col items-center"><i class="fas fa-users mb-1"></i><span class="text-[9px]">Refer</span></button>
+            <button onclick="app.nav('chat')" class="nav-btn flex flex-col items-center"><i class="fas fa-comment-dots mb-1"></i><span class="text-[9px]">Chat</span></button>
+            <button onclick="app.nav('history')" class="nav-btn flex flex-col items-center"><i class="fas fa-clock-rotate-left mb-1"></i><span class="text-[9px]">History</span></button>
+            <button onclick="app.nav('admin')" class="nav-btn flex flex-col items-center text-slate-600"><i class="fas fa-user-shield mb-1"></i><span class="text-[9px]">Admin</span></button>
+        </nav>
+    </div>
 
     <script type="module" src="app.js"></script>
 </body>
