--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
                         <p class="text-[10px] text-slate-400">Total Referrals</p>
                         <p id="ref-count" class="text-xl font-bold">0</p>
                     </div>
-                    <div class="gl
-
-ass p-4 rounded-2xl text-center">
+                    <div class="glass p-4 rounded-2xl text-center">
                         <p class="text-[10px] text-slate-400">Total Commissions</p>
                         <p id="ref-earnings" class="text-xl font-bold text-green-400">₱0.00</p>
                     </div>
