--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
     <script src='//libtl.com/sdk.js' data-zone='10337795' data-sdk='show_10337795'></script>
     <script src='//libtl.com/sdk.js' data-zone='10337853' data-sdk='show_10337853'></script>
-
     <style>
         body { background: #020617; color: #e2e8f0; font-family: 'Inter', sans-serif; }
         .gold-gradient { background: linear-gradient(135deg, #fbbf24 0%, #d97706 100%); }
@@ -43,7 +42,7 @@
             <div class="text-right">
 
                 <p class="text-[10px] text-slate-400 uppercase font-bold">Balance</p>
-                <h2 id="balance-display" class="text-xl font-black text-white">₱0.00</h2>
+                <h2 id="balance-display" class="text-xl font-black text-white">₱0.0000</h2>
             </div>
         </header>
 
@@ -76,7 +75,6 @@
                         <span class="font-bold text-sm">Premium Ad</span>
                         <span class="text-[10px] text-slate-500">Earn ₱0.0065</span>
                     </button>
-                    
                 </div>
             </section>
 
@@ -98,7 +96,9 @@
                         <p class="text-[10px] text-slate-400">Total Referrals</p>
                         <p id="ref-count" class="text-xl font-bold">0</p>
                     </div>
-                    <div class="glass p-4 rounded-2xl text-center">
+                    <div class="gl
+
+ass p-4 rounded-2xl text-center">
                         <p class="text-[10px] text-slate-400">Total Commissions</p>
                         <p id="ref-earnings" class="text-xl font-bold text-green-400">₱0.00</p>
                     </div>
