--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ChatGPT | Midjourney:
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -84,14 +84,14 @@
                             <i class="fas fa-bolt text-blue-400 text-xl"></i>
                         </div>
                         <span class="font-bold text-sm">Turbo Ad</span>
-                        <span class="text-[10px] text-slate-500">Earn ₱0.0065</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.0075</span>
                     </button>
                     <button onclick="app.playAd('pop')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
                         <div class="w-12 h-12 rounded-full bg-purple-500/20 flex items-center justify-center mb-3">
                             <i class="fas fa-rocket text-purple-400 text-xl"></i>
                         </div>
                         <span class="font-bold text-sm">Premium Ad</span>
-                        <span class="text-[10px] text-slate-500">Earn ₱0.0065</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.0075</span>
                     </button>
                 </div>
             </section>
@@ -163,7 +163,9 @@ id="sec-referral" class="hidden space-y-4">
                     <button onclick="app.showCreateTopicModal()" class="bg-yellow-500 text-black px-4 py-2 rounded-lg font-bold text-sm">New Topic</button>
                 </div>
                 <div id="topics-list" class="space-y-3">
-                    <p class="text-center text-slate-500 py-10">No topics yet. Be the first!</p>
+                    <p class="text-center text-slate-500 py-10">No topic
+
+s yet. Be the first!</p>
                 </div>
             </section>
 
